collectors.tolist -> just tolist